Task queue for PlaylistPlayer